# chat

./: .env  Cargo.toml  README.md  cliff.toml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: mod.rs  request_id.rs
chat_server/: Cargo.toml  README.md  app.yml  test.rest
chat_server/fixture/: private.pem  public.pem
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  file.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_server/src/models/: README.md  chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/models/testkeys/: private.pem  public.pem
chat_server/src/utils/: jwt.rs
migrations/: 20240706160746_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: main.rs  sse.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  chat.rs  mod.rs
