[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [
"chrono",
"postgres",
"runtime-tokio",
"tls-rustls",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_yml = "0.0.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }