[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }